--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
-
-<head>
+  <head>
     {% include 'parciais/_head.html' %}
-    <title>{% block titulo %}{% endblock %}E-commerce</title>
-</head>
+    <title>{% block titulo %}{% endblock %}UpHardware!</title>
+  </head>
 
-<body>
+  <body>
     {% include 'parciais/_nav.html' %}
 
     <main class="container mt-4 mb-4">
-        {% include 'parciais/_messages.html' %}
-        {% block conteudo %}{% endblock %}
+      {% include 'parciais/_messages.html' %} {% block conteudo %}{% endblock %}
     </main>
 
     {% include 'parciais/_footer.html' %}
-
-</body>
-
+  </body>
 </html>
