Creating methods to saving an order

--- a/produto/templates/produto/resumodacompra.html
+++ b/produto/templates/produto/resumodacompra.html
@@ -18,7 +18,7 @@
             <dd class="col-lg-4">{{ usuario.last_name }}</dd>
 
             <dt class="col-lg-2">Idade:</dt>
-            <dd class="col-lg-4">{{ usuario.perfil.idade }}</dd>
+            <dd class="col-lg-4">{{ usuario.perfil.get_formated_age}}</dd>
             <dt class="col-lg-2">Nascimento:</dt>
             <dd class="col-lg-4">{{ usuario.perfil.data_nascimento }}</dd>
 
