--- a/pedido/templates/pedido/pagar.html
+++ b/pedido/templates/pedido/pagar.html
@@ -15,14 +15,14 @@
       <div class="row">
         <div class="col-md-6 mb-3">
           <label for="primeiroNome">Nome</label>
-          <input type="text" class="form-control" id="primeiroNome" placeholder="" value="" required="">
+          <input type="text" class="form-control" id="primeiroNome" placeholder="" value="{{user.first_name}}" required="">
           <div class="invalid-feedback">
             É obrigatório inserir um nome válido.
           </div>
         </div>
         <div class="col-md-6 mb-3">
           <label for="sobrenome">Sobrenome</label>
-          <input type="text" class="form-control" id="sobrenome" placeholder="" value="" required="">
+          <input type="text" class="form-control" id="sobrenome" placeholder="" value="{{user.last_name}}" required="">
           <div class="invalid-feedback">
             É obrigatório inserir um sobre nome válido.
           </div>
@@ -30,21 +30,21 @@
       </div>
 
       <div class="mb-3">
-        <label for="nickname">Nickname</label>
+        <label for="nickname">Usuário</label>
         <div class="input-group">
           <div class="input-group-prepend">
             <span class="input-group-text">@</span>
           </div>
-          <input type="text" class="form-control" id="nickname" placeholder="Nickname" required="">
+          <input type="text" class="form-control" id="nickname" placeholder="Username" required="" value="{{user}}">
           <div class="invalid-feedback" style="width: 100%;">
-            Seu nickname é obrigatório.
+            Seu Username é obrigatório.
           </div>
         </div>
       </div>
 
       <div class="mb-3">
-        <label for="email">Email <span class="text-muted">(Opcional)</span></label>
-        <input type="email" class="form-control" id="email" placeholder="fulano@exemplo.com">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email" placeholder="fulano@exemplo.com" value="{{user.email}}">
         <div class="invalid-feedback">
           Por favor, insira um endereço de e-mail válido, para atualizações de entrega.
         </div>
@@ -52,7 +52,7 @@
 
       <div class="mb-3">
         <label for="endereco">Endereço</label>
-        <input type="text" class="form-control" id="endereco" placeholder="Rua dos bobos, nº 0" required="">
+        <input type="text" class="form-control" id="endereco" placeholder="Rua dos bobos, nº 0" required="" value="{{user.perfil.endereco}}">
         <div class="invalid-feedback">
           Por favor, insira seu endereço de entrega.
         </div>
@@ -112,7 +112,7 @@
         </div>
         <div class="col-md-3 mb-3">
           <label for="cep">CEP</label>
-          <input type="text" class="form-control" id="cep" placeholder="" required="">
+          <input type="text" class="form-control" id="cep" placeholder="" required="" value="{{user.perfil.cep}}">
           <div class="invalid-feedback">
             É obrigatório inserir um CEP.
           </div>
