--- a/produto/templates/produto/detalhe.html
+++ b/produto/templates/produto/detalhe.html
@@ -61,7 +61,7 @@
                     <strong>Novo</strong>
                 {%endif%}
                 {%if produto.qualidade_equipamento == 'S'%}
-                    <strong>Seminovo</strong>
+                    <strong>Semi-novo</strong>
                 {%endif%}
                 {%if produto.qualidade_equipamento == 'U'%}
                     <strong>Usado</strong>
