--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,72 @@
   <head>
     {% include 'parciais/_head.html' %}
     <title>{% block titulo %}{% endblock %}UpHardware!</title>
+    <style>
+
+.chat-btn {
+    position: fixed;
+    left: 30px;
+    bottom: 30px;
+    cursor: pointer;
+}
+
+.chat-btn .close {
+    display: none
+}
+
+.chat-btn i {
+    transition: all 0.9s ease
+}
+
+#check:checked~.chat-btn i {
+    display: block;
+    pointer-events: auto;
+    transform: rotate(180deg)
+}
+
+#check:checked~.chat-btn .comment {
+    display: none
+}
+
+.chat-btn i {
+    font-size: 22px;
+    color: #fff !important
+}
+
+.chat-btn {
+    width: 70px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    background-color: rgb(84, 180, 211);
+    color: #fff;
+    font-size: 35px;
+    border: none
+}
+
+.wrapper {
+    position: absolute;
+    left: 100px;
+    bottom: 100px;
+    width: 350px;
+    height: 450px;
+    background-color: #fff;
+    border-radius: 5px;
+    opacity: 0;
+    transition: all 0.4s
+}
+
+#check:checked~.wrapper {
+    opacity: 1
+}
+
+#check {
+  display: none !important
+}
+
+    </style>
   </head>
 
   <body>
@@ -11,7 +77,16 @@
     <main class="container mt-4 mb-4">
       {% include 'parciais/_messages.html' %} {% block conteudo %}{% endblock %}
     </main>
-
+    <input type="checkbox" id="check"> 
+    <label class="chat-btn" for="check"> 
+        <i class="fas fa-comment comment"></i>
+        <i class="fas fa-comment close"></i>
+    </label> 
+      <iframe
+        class="wrapper"
+        allow="microphone;"
+        src="https://console.dialogflow.com/api-client/demo/embedded/740b30b0-1255-4257-82ff-0f2847f02921">
+      </iframe>
     {% include 'parciais/_footer.html' %}
   </body>
 </html>
